Fixed opacity issues in motd layers

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 			<article style="background:green">Test3</article>
 			<article style="background:yellow">Test4</article>
 		</section>
+		<div id="motdbg"></div>
 		<div id="motdhelper"></div>
 	</aside>
 	<div class="ui-widget">
