Fixed semantic issues in motd

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 		</div>
 	</header>
 	<aside id="motd" class="unsignedMotdBox">
-		<section id="motdmessages">
-			<article style="background:red">Test1</article>
-			<article style="background:blue">Test2</article>
-			<article style="background:green">Test3</article>
-			<article style="background:yellow">Test4</article>
-		</section>
+		<ul id="motdmessages">
+			<li style="background:red"><div>Message of the Day 1</div></li>
+			<li style="background:blue"><div>Message of the Day 1</div></li>
+			<li style="background:green"><div>Message of the Day 1</div></li>
+			<li style="background:yellow"><div>Message of the Day 1</div></li>
+		</ul>
 		<div id="motdbg"></div>
 		<div id="motdhelper"></div>
 	</aside>
