Added support for section navigation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="js/init.js"></script>
 </head>
 <body>
+<!-- HEADER -->
 	<header id="tophead">
 		<nav id="topnav">
 			<ul class="fleft">
@@ -41,12 +42,12 @@
 		
 		<nav id="mainnav">
 			<ul>
-				<li><a href="#" class="home">Home</a></li>
-				<li><a href="#" class="pract">Practice</a></li>
-				<li><a href="#" class="eval">Evaluate</a></li>
-				<li><a href="#" class="subt">Subtitle</a></li>
-				<li><a href="#" class="config">Configure</a></li>
-				<li><a href="#" class="about">About Babelium</a></li>
+				<li><a class="home">Home</a></li>
+				<li><a class="pract">Practice</a></li>
+				<li><a class="eval">Evaluate</a></li>
+				<li><a class="subt">Subtitle</a></li>
+				<li><a class="config">Configure</a></li>
+				<li><a class="about">About Babelium</a></li>
 			</ul>
 		</nav>		
 		
@@ -56,6 +57,8 @@
 				<button id="btnSearch"class="right">Search</button>
 		</div>
 	</header>
+<!--  END OF HEADER -->
+<!-- MOTD -->
 	<aside id="motd" class="unsignedMotdBox">
 		<ul id="motdmessages">
 			<li style="background:red"><div>Message of the Day 1</div></li>
@@ -63,14 +66,28 @@
 			<li style="background:green"><div>Message of the Day 1</div></li>
 			<li style="background:yellow"><div>Message of the Day 1</div></li>
 		</ul>
-		<div id="motdbg"></div>
 		<div id="motdhelper"></div>
 	</aside>
+<!-- END OF MOTD -->
+<!-- MAIN CONTENT -->
+	<section id="maincontent">
+		<header>
+			<h1>Sección Principal</h1>
+			<div id="hhelper"></div>
+		</header>
+		
+		
+	</section>
+<!-- END OF MAIN CONTENT -->
 	<div class="ui-widget">
 		<div class="ui-state-highlight ui-corner-all" style="margin: 20px; padding: 5px;"> 
 			<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
 			<strong>Hey!</strong> You should try to press keyboard arrows!</p>
 		</div>
 	</div>
+<!-- FOOTER -->
+<footer>
+</footer>
+<!-- END OF FOOTER -->
 </body>
 </html>
