* Minimal changes on core * Added header and footer template for output html file

--- a/util/_out/out.html
+++ b/util/_out/out.html
@@ -1,5 +1,21 @@
+<!DOCTYPE html> 
+<html> 
+<head> 
+	<meta charset="UTF-8" /> 
+	<title>Output Title</title> 
+ 
+	<!-- CSS --> 
+	<link rel="stylesheet" type="text/css" media="screen" href="out.css" />
+</head>
+</body>
+<!-- Start of generated content -->
+
 <div class="box box0">
 	<div id="VGroup0">
 		trololo
 	</div>
 </div>
+
+<!-- End of generated content -->
+</body>
+</html>
