--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" media="screen" href="themes/babelium/main.css" />
 	
-	<!-- JS -->
+	<!-- JQuery -->
 	<script type="text/javascript" src="js/jquery1.5.1.js"></script>
-	<script type="text/javascript" src="js/jquery.url.js"></script>
+	<script type="text/javascript" src="js/jquery-hashchange.js"></script>
+
+	<!-- Localebox -->
 	<script type="text/javascript" src="js/localebox.js"></script>
+	<!-- Navigation Links -->
 	<script type="text/javascript" src="js/navigationlinks.js"></script>
-	<script type="text/javascript" src="js/motd.js"></script>
+
+	<!-- Init -->
 	<script type="text/javascript" src="js/init.js"></script>
 </head>
-<body>
+<body class="VBox">
 <!-- HEADER -->
-	<header id="tophead">
-		<nav id="topnav">
-			<ul class="fleft">
+	<header id="tophead" class="VBox">
+
+		<!-- top naviation -->
+		<nav id="topnav" class="HBox">
+			<!-- left aligned box -->
+			<ul class="HBox vcenter">
 				<li>Language:</li>
 				<li>
 					<select id="localebox">
@@ -29,7 +36,10 @@
 					</select>
 				</li>
 			</ul>
-			<ul class="fright">
+			<!-- spacer just to fill space between boxes -->
+			<div class="spacer"></div>
+			<!-- right aligned box -->
+			<ul class="HBox vcenter">
 				<li><a href="#" class="img"><img src="themes/babelium/images/help_icon.png" alt="Help" width="17" height="17" /></a></li>
 				<li><a href="#" class="blue">Help</a></li>
 				<li><a href="#" class="blue">Blog</a></li>
@@ -38,10 +48,15 @@
 			</ul>
 		</nav>
 		
+		<!-- logo -->
 		<div id="logo"><img src="themes/babelium/images/flan_dullv2.png" alt="Bablium Project" width="174" height="156" /></div>
 		
-		<nav id="mainnav">
-			<ul>
+		<!-- main navigation -->
+		<nav id="mainnav" class="HBox vcenter">
+			<!-- x2 left space width a min-width to avoid logo -->
+			<div class="spacer" style="min-width: 174px;"></div>
+			<!-- nav links -->
+			<ul class="HBox">
 				<li><a href="#/home/" class="home">Home</a></li>
 				<li><a href="#/practice/" class="pract">Practice</a></li>
 				<li><a href="#/evaluate/" class="eval">Evaluate</a></li>
@@ -49,18 +64,21 @@
 				<li><a href="#/config/" class="config">Configure</a></li>
 				<li><a href="#/about/" class="about">About Babelium</a></li>
 			</ul>
+			<!-- right space -->
+			<div class="spacer"></div>
 		</nav>		
 		
-		<div id="searchnav">
-				<button id="btnUpload" class="left upload">Upload</button>
-				<input id="txtSearch" type="text" placeholder="Enter your search terms..." class="middle search" />
-				<button id="btnSearch"class="right">Search</button>
+		<!-- search bar -->
+		<div id="searchnav" class="HBox vcenter">
+				<button id="btnUpload" class="upload">Upload</button>
+				<input id="txtSearch" type="text" placeholder="Enter your search terms..." class="search boxFlex" />
+				<button id="btnSearch">Search</button>
 		</div>
 	</header>
 <!--  END OF HEADER -->
 <!-- MOTD -->
 	<aside id="motd" class="unsignedMotdBox">
-		<ul id="motdmessages">
+		<ul id="motdmessages" class="HBox hcenter">
 			<li style="background:red"><div>Message of the Day 1</div></li>
 			<li style="background:blue"><div>Message of the Day 2</div></li>
 			<li style="background:green"><div>Message of the Day 3</div></li>
@@ -70,27 +88,13 @@
 	</aside>
 <!-- END OF MOTD -->
 <!-- MAIN CONTENT -->
-	<section id="maincontent">
+	<section id="maincontent" class="VBox">
 		<header>
 			<h1>Sección Principal</h1>
 			<div id="hhelper"></div>
 		</header>
-		
-		
 	</section>
 <!-- END OF MAIN CONTENT -->
-	<div class="ui-widget">
-		<div class="ui-state-highlight ui-corner-all" style="margin: 20px; padding: 5px;"> 
-			<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-			<strong>Hey!</strong> You should try to press keyboard arrows!</p>
-		</div>
-	</div>
-	<div class="ui-widget">
-		<div class="ui-state-highlight ui-corner-all" style="margin: 20px; padding: 5px;"> 
-			<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-			You should also try to navigate through the sections!</p>
-		</div>
-	</div>
 <!-- FOOTER -->
 <footer>
 </footer>
