* Removed useless scripts * Improved mxml bindings * Moved box demo * Added database schema

--- a/util/demos/boxdemo/box-demo.html
+++ b/util/demos/boxdemo/box-demo.html
@@ -146,7 +146,7 @@
 	</aside>
 
 <!-- EXAMPLE 1 -->
-	<section id="example1" class="hcenter">
+	<section id="example1" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 1</h1>
 			<h2>Vertical box</h2>
@@ -179,7 +179,7 @@
 <!-- END OF EXAMPLE 1 -->
 
 <!-- EXAMPLE 2 -->
-	<section id="example2" class="hcenter">
+	<section id="example2" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 2</h1>
 			<h2>Vertical box, horizontally centered</h2>
@@ -212,7 +212,7 @@
 <!-- END OF EXAMPLE 2 -->
 
 <!-- EXAMPLE 3 -->
-	<section id="example3" class="hcenter">
+	<section id="example3" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 3</h1>
 			<h2>Vertical box, vertically centered, horizontally at start</h2>
@@ -245,7 +245,7 @@
 <!-- END OF EXAMPLE 3 -->
 
 <!-- EXAMPLE 4 -->
-	<section id="example4" class="hcenter">
+	<section id="example4" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 4</h1>
 			<h2>Horizontal box</h2>
@@ -278,7 +278,7 @@
 <!-- END OF EXAMPLE 4 -->
 
 <!-- EXAMPLE 5 -->
-	<section id="example5" class="hcenter">
+	<section id="example5" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 5</h1>
 			<h2>Horizontal box, vertically centered</h2>
@@ -311,7 +311,7 @@
 <!-- END OF EXAMPLE 5 -->
 
 <!-- EXAMPLE 6 -->
-	<section id="example6" class="hcenter">
+	<section id="example6" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 6</h1>
 			<h2>Horizontal box, vertically and horizontally aligned at end</h2>
@@ -344,7 +344,7 @@
 <!-- END OF EXAMPLE 6 -->
 
 <!-- EXAMPLE 7 -->
-	<section id="example7" class="hcenter">
+	<section id="example7" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 7</h1>
 			<h2>Vertical box, use of boxFlex</h2>
@@ -377,7 +377,7 @@
 <!-- END OF EXAMPLE 7 -->
 
 <!-- EXAMPLE 8 -->
-<section id="example8" class="hcenter">
+<section id="example8" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 8</h1>
 			<h2>Vertical box, use of boxFlex as spacer</h2>
@@ -408,7 +408,7 @@
 <!-- END OF EXAMPLE 8 -->
 
 <!-- EXAMPLE 9 -->
-<section id="example9" class="hcenter">
+<section id="example9" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 9</h1>
 			<h2>Horizontal box, use of boxFlex</h2>
@@ -441,7 +441,7 @@
 <!-- END OF EXAMPLE 9 -->
 
 <!-- EXAMPLE 10 -->
-	<section id="example10" class="hcenter">
+	<section id="example10" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 10</h1>
 			<h2>Horizontal box, use of boxFlex as spacer</h2>
@@ -472,7 +472,7 @@
 <!-- END OF EXAMPLE 10 -->
 
 <!-- EXAMPLE 11 -->
-	<section id="example11" class="hcenter">
+	<section id="example11" class="VBox hcenter">
 		<hgroup class="HBox vcenter">
 			<h1>Example 11</h1>
 			<h2>Nested flexible boxes</h2>
