* Added forgotten VO * Added .hgignore for Config.php (Only Config.php.example should be available at repository) * Added example of zend_rest api usabillity through JQuery

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 	</section>
 <!-- END OF MAIN CONTENT -->
 <!-- FOOTER -->
+<div class="boxFlex"></div>
 <footer>
+Footer
 </footer>
 <!-- END OF FOOTER -->
 </body>
