--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -46,7 +46,7 @@ var requiredRevision = ${version_revision};
 <body>
 <div id ="main">
 <div id="title">
-	<img src="resources/images/babelium_project.png" alt="Logo Babelium Project"/>
+	<img src="resources/images/logo.png" alt="Logo Babelium Project"/>
 </div>
 <div id="bplayer-div">Título del vídeo:<br/>
 <script language="JavaScript" type="text/javascript">
