--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -21,7 +21,7 @@ Learn more about Flex at http://flex.org
 <title>${title}</title>
 <script src="script/AC_OETags.js" language="javascript"></script>
 <script src="script/jquery-1.4.2.js" language="javascript"></script>
-<script src="script/testing.js" language="javascript"></script>
+<script src="script/jsFlashBridge.js" language="javascript"></script>
 <link rel="stylesheet" type="text/css" href="style/default.css" />
 
 <!--  BEGIN Browser History required section -->
