--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -22,6 +22,9 @@ Learn more about Flex at http://flex.org
 <script src="script/AC_OETags.js" language="javascript"></script>
 <script src="script/jquery-1.4.2.js" language="javascript"></script>
 <script src="script/jsFlashBridge.js" language="javascript"></script>
+<script src="script/exercise.js" language="javascript"></script>
+<script src="script/cuePointManager.js" language="javascript"></script>
+<script src="script/cueObject.js" language="javascript"></script>
 <link rel="stylesheet" type="text/css" href="style/default.css" />
 
 <!--  BEGIN Browser History required section -->
@@ -45,137 +48,153 @@ var requiredRevision = ${version_revision};
 
 <body>
 <div id ="main">
-<div id="title">
-	<img src="resources/images/logo.png" alt="Logo Babelium Project"/>
-</div>
-<div id="bplayer-div">Título del vídeo:<br/>
-<script language="JavaScript" type="text/javascript">
-<!--
-// Version check for the Flash Player that has the ability to start Player Product Install (6.0r65)
-var hasProductInstall = DetectFlashVer(6, 0, 65);
-
-// Version check based upon the values defined in globals
-var hasRequestedVersion = DetectFlashVer(requiredMajorVersion, requiredMinorVersion, requiredRevision);
-
-if ( hasProductInstall && !hasRequestedVersion ) {
-	// DO NOT MODIFY THE FOLLOWING FOUR LINES
-	// Location visited after installation is complete if installation is required
-	var MMPlayerType = (isIE == true) ? "ActiveX" : "PlugIn";
-	var MMredirectURL = window.location;
-    document.title = document.title.slice(0, 47) + " - Flash Player Installation";
-    var MMdoctitle = document.title;
-
-	AC_FL_RunContent(
-		"src", "playerProductInstall",
-		"FlashVars", "MMredirectURL="+MMredirectURL+'&MMplayerType='+MMPlayerType+'&MMdoctitle='+MMdoctitle+"",
-		"width", "${width}",
-		"height", "${height}",
-		"align", "middle",
-		"id", "${application}",
-		"quality", "high",
-		"bgcolor", "${bgcolor}",
-		"name", "${application}",
-		"FlashVars", "videoId=tdes_1179_qa.flv",
-		"allowScriptAccess","sameDomain",
-		"type", "application/x-shockwave-flash",
-		"pluginspage", "http://www.adobe.com/go/getflashplayer",
-		"wmode", "transparent"
-	);
-} else if (hasRequestedVersion) {
-	// if we've detected an acceptable version
-	// embed the Flash Content SWF when all tests are passed
-	AC_FL_RunContent(
-			"src", "${swf}",
+	<div id="title">
+		<img src="resources/images/logo.png" alt="Logo Babelium Project"/>
+	</div>
+	<div id="bplayer-div">Título del vídeo:<br/>
+	<script language="JavaScript" type="text/javascript">
+	<!--
+	// Version check for the Flash Player that has the ability to start Player Product Install (6.0r65)
+	var hasProductInstall = DetectFlashVer(6, 0, 65);
+	
+	// Version check based upon the values defined in globals
+	var hasRequestedVersion = DetectFlashVer(requiredMajorVersion, requiredMinorVersion, requiredRevision);
+	
+	if ( hasProductInstall && !hasRequestedVersion ) {
+		// DO NOT MODIFY THE FOLLOWING FOUR LINES
+		// Location visited after installation is complete if installation is required
+		var MMPlayerType = (isIE == true) ? "ActiveX" : "PlugIn";
+		var MMredirectURL = window.location;
+	    document.title = document.title.slice(0, 47) + " - Flash Player Installation";
+	    var MMdoctitle = document.title;
+	
+		AC_FL_RunContent(
+			"src", "playerProductInstall",
+			"FlashVars", "MMredirectURL="+MMredirectURL+'&MMplayerType='+MMPlayerType+'&MMdoctitle='+MMdoctitle+"",
 			"width", "${width}",
 			"height", "${height}",
 			"align", "middle",
 			"id", "${application}",
 			"quality", "high",
 			"bgcolor", "${bgcolor}",
-			"FlashVars", "videoId=tdes_1179_qa.flv",
 			"name", "${application}",
+			"FlashVars", "",
 			"allowScriptAccess","sameDomain",
 			"type", "application/x-shockwave-flash",
 			"pluginspage", "http://www.adobe.com/go/getflashplayer",
 			"wmode", "transparent"
-	);
-  } else {  // flash is too old or we can't detect the plugin
-    var alternateContent = 'Alternate HTML content should be placed here. '
-  	+ 'This content requires the Adobe Flash Player. '
-   	+ '<a href=http://www.adobe.com/go/getflash/>Get Flash</a>';
-    document.write(alternateContent);  // insert non-flash content
-  }
-// -->
-</script>
-<noscript>
-  	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
-			id="${application}" width="${width}" height="${height}"
-			codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
-			<param name="movie" value="${swf}.swf" />
-			<param name="quality" value="high" />
-			<param name="bgcolor" value="${bgcolor}" />
-			<param name="flashVars" value="videoId=tdes_1179_qa.flv" />
-			<param name="allowScriptAccess" value="sameDomain" />
-			<embed src="${swf}.swf" quality="high" bgcolor="${bgcolor}" flashVars="videoId=tdes_1179_qa.flv"
-				width="${width}" height="${height}" name="${application}" align="middle"
-				play="true"
-				loop="false"
-				quality="high"
-				allowScriptAccess="sameDomain"
-				type="application/x-shockwave-flash"
-				pluginspage="http://www.adobe.com/go/getflashplayer">
-			</embed>
-	</object>
-</noscript>
-</div>
-<div id="right-column">
-	<span class="title">Controles del reproductor:</span>
-	<div class="form-c">
-		<input type="button" name="btnPlay" value="Play" class="bbutton"/>
-		<input type="button" name="btnPause" value="Pause" class="bbutton"/>
-		<input type="button" name="btnStop" value="Stop" class="bbutton"/>
-		<input type="text" name="txtSeek" value="0" class="btext"/>
+		);
+	} else if (hasRequestedVersion) {
+		// if we've detected an acceptable version
+		// embed the Flash Content SWF when all tests are passed
+		AC_FL_RunContent(
+				"src", "${swf}",
+				"width", "${width}",
+				"height", "${height}",
+				"align", "middle",
+				"id", "${application}",
+				"quality", "high",
+				"bgcolor", "${bgcolor}",
+				"FlashVars", "",
+				"name", "${application}",
+				"allowScriptAccess","sameDomain",
+				"type", "application/x-shockwave-flash",
+				"pluginspage", "http://www.adobe.com/go/getflashplayer",
+				"wmode", "transparent"
+		);
+	  } else {  // flash is too old or we can't detect the plugin
+	    var alternateContent = 'Alternate HTML content should be placed here. '
+	  	+ 'This content requires the Adobe Flash Player. '
+	   	+ '<a href=http://www.adobe.com/go/getflash/>Get Flash</a>';
+	    document.write(alternateContent);  // insert non-flash content
+	  }
+	// -->
+	</script>
+	<noscript>
+	  	<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
+				id="${application}" width="${width}" height="${height}"
+				codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
+				<param name="movie" value="${swf}.swf" />
+				<param name="quality" value="high" />
+				<param name="bgcolor" value="${bgcolor}" />
+				<param name="flashVars" value="" />
+				<param name="allowScriptAccess" value="sameDomain" />
+				<embed src="${swf}.swf" quality="high" bgcolor="${bgcolor}" flashVars=""
+					width="${width}" height="${height}" name="${application}" align="middle"
+					play="true"
+					loop="false"
+					quality="high"
+					allowScriptAccess="sameDomain"
+					type="application/x-shockwave-flash"
+					pluginspage="http://www.adobe.com/go/getflashplayer">
+				</embed>
+		</object>
+	</noscript>
 	</div>
-	<span class="title">Opciones del reproductor:</span>
-	<div class="form-c">
-		<table cellpadding="0" cellspacing="0" border="0">
-			<tr><td><strong>Subtítulos:</strong></td>
-				<td><input type="radio" name="raSubs" value="1" checked>Enable</input></td>
-				<td><input type="radio" name="raSubs" value="0">Disable</input></td>
-			</tr>
-			<tr><td><strong>Roles:</strong></td>
-				<td><input type="radio" name="raRoles" value="1">Enable</input></td>
-				<td><input type="radio" name="raRoles" value="0" checked>Disable</input></td>
-			</tr>
-			<tr><td><strong>Controles de subtitulación:</strong></td>
-				<td><input type="radio" name="raCtrlSubs" value="1">Enable</input></td>
-				<td><input type="radio" name="raCtrlSubs" value="0" checked>Disable</input></td>
-			</tr>
-		</table>
+	<div id="right-column">
+		<span class="title">Controles del reproductor:</span>
+		<div class="form-c">
+			<input type="button" name="btnPlay" value="Play" class="bbutton"/>
+			<input type="button" name="btnPause" value="Pause" class="bbutton"/>
+			<input type="button" name="btnStop" value="Stop" class="bbutton"/>
+			<input type="text" name="txtSeek" value="0" class="btext"/>
+		</div>
+		<span class="title">Opciones del reproductor:</span>
+		<div class="form-c">
+			<table cellpadding="0" cellspacing="0" border="0">
+				<tr><td><strong>Subtítulos:</strong></td>
+					<td><input type="radio" name="raSubs" value="1" checked>Enable</input></td>
+					<td><input type="radio" name="raSubs" value="0">Disable</input></td>
+				</tr>
+				<tr><td><strong>Roles:</strong></td>
+					<td><input type="radio" name="raRoles" value="1">Enable</input></td>
+					<td><input type="radio" name="raRoles" value="0" checked>Disable</input></td>
+				</tr>
+				<tr><td><strong>Controles de subtitulación:</strong></td>
+					<td><input type="radio" name="raCtrlSubs" value="1">Enable</input></td>
+					<td><input type="radio" name="raCtrlSubs" value="0" checked>Disable</input></td>
+				</tr>
+			</table>
+		</div>
+		<span class="title">Vídeos en reproducción:</span>
+		<div class="form-c">
+			<table cellpadding="0" cellspacing="0" border="0">
+				<tr><td><strong>Selecciona número de vídeos:</strong></td>
+					<td><input type="radio" name="raNumVid" value="1" checked>1</input></td>
+					<td><input type="radio" name="raNumVid" value="0">2</input></td>
+				</tr>
+			</table>
+			<table width="80%" cellpadding="0" cellspacing="5" border="0">
+			<tr><td><strong>Video1:</strong></td><td><input type="text" name="txtVid1" class="btext2"/></td></tr>
+			<tr><td><strong>Video2:</strong></td><td><input type="text" name="txtVid2" class="btext2"/></td></tr>
+			</table>
+		</div>
+		<span class="title">Control de Roles:</span>
+		<div class="form-c">
+			<table cellpadding="0" cellspacing="0" border="0">
+				<tr><td><strong>Mostrar flechas:</strong></td>
+					<td><input type="radio" name="raFlechas" value="1">Si</input></td>
+					<td><input type="radio" name="raFlechas" value="0" checked>No</input></td>
+				</tr>
+			</table>
+		</div>
 	</div>
-	<span class="title">Vídeos en reproducción:</span>
-	<div class="form-c">
-		<table cellpadding="0" cellspacing="0" border="0">
-			<tr><td><strong>Selecciona número de vídeos:</strong></td>
-				<td><input type="radio" name="raNumVid" value="1" checked>1</input></td>
-				<td><input type="radio" name="raNumVid" value="0">2</input></td>
-			</tr>
-		</table>
-		<table width="80%" cellpadding="0" cellspacing="5" border="0">
-		<tr><td><strong>Video1:</strong></td><td><input type="text" name="txtVid1" class="btext2"/></td></tr>
-		<tr><td><strong>Video2:</strong></td><td><input type="text" name="txtVid2" class="btext2"/></td></tr>
-		</table>
+	<div id="panels">
+		<div id="exerciseInfoPanel">
+			Choose a rol:
+			<select id="roleCombo"></select>
+			<br />
+			Choose subtitle language:
+			<select id="localeCombo"></select>
+			<br />
+			Choose recording method:
+			<br />
+			<input type="radio" name="micOnly" checked="checked" value="Microphone only">
+			<input type="radio" name="micAndWebcam" value="Webcam and microphone">
+			<br />
+			<input id="startRecordingBtn" type="submit" name="startRecordingBtn" value="Start Recording">
+		</div>
 	</div>
-	<span class="title">Control de Roles:</span>
-	<div class="form-c">
-		<table cellpadding="0" cellspacing="0" border="0">
-			<tr><td><strong>Mostrar flechas:</strong></td>
-				<td><input type="radio" name="raFlechas" value="1">Si</input></td>
-				<td><input type="radio" name="raFlechas" value="0" checked>No</input></td>
-			</tr>
-		</table>
-	</div>
-</div>
 </div>
 </body>
 </html>
