Deciding how to implement event listeners on js bridge

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -26,6 +26,10 @@ Learn more about Flex at http://flex.org
 <script src="script/exercise.js" language="javascript"></script>
 <script src="script/cuePointManager.js" language="javascript"></script>
 <script src="script/cueObject.js" language="javascript"></script>
+<script src="script/onPlaybackCuePoint.js" language="javascript"></script>
+<script src="script/onRecordingOtherRoleCuePoint.js" language="javascript"></script>
+<script src="script/onRecordingSelectedRoleStartCuePoint.js" language="javascript"></script>
+<script src="script/onRecordingSelectedRoleStopCuePoint.js" language="javascript"></script>
 <link rel="stylesheet" type="text/css" href="style/default.css" />
 
 <!--  BEGIN Browser History required section -->
