Everything working except for the logged in part

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -184,6 +184,27 @@ var requiredRevision = ${version_revision};
 			</table>
 		</div>
 	</div>
+	
+	<!-- 
+	<div id="videoHolder">
+		<ul class="playbackControls">
+			<li class="startPauseBtn"></li>
+			<li class="stopBtn"></li>
+			<li class="subtitleStartEndBtn"></li>
+			<li class="progressBar"></li>
+			<li class="timeDisplay"></li>
+			<li class="micVolumeBar"></li>
+			<li class="subtitleOnOffBtn"></li>
+		</ul>
+		<ul class="recordingControls">
+			<li class="arrowDisplay"></li>
+			<li class="rolePanel"></li>
+		</ul>
+	</div>
+	-->
+	
+	
+	
 	<div id="panels">
 		<div id="exerciseInfoPanel">
 			Choose a rol:
