Removing some unnecesary resources. Adding css styling.

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -136,6 +136,8 @@ var requiredRevision = ${version_revision};
 		</object>
 	</noscript>
 	</div>
+
+	<!--
 	<div id="right-column">
 		<span class="title">Controles del reproductor:</span>
 		<div class="form-c">
@@ -184,12 +186,13 @@ var requiredRevision = ${version_revision};
 			</table>
 		</div>
 	</div>
+	-->
 	
-	<!-- 
+	
 	<div id="videoHolder">
 		<ul class="playbackControls">
-			<li class="startPauseBtn"></li>
-			<li class="stopBtn"></li>
+			<li class="controlBtn"><span class="playPauseBtn"></span></li>
+			<li class="controlBtn stopBtn">s</li>
 			<li class="subtitleStartEndBtn"></li>
 			<li class="progressBar"></li>
 			<li class="timeDisplay"></li>
@@ -201,7 +204,6 @@ var requiredRevision = ${version_revision};
 			<li class="rolePanel"></li>
 		</ul>
 	</div>
-	-->
 	
 	
 	
