Added back the session init to the html template until we find a permanent solution. Fixed the images relative path Fixed a couple of object properties that were wrong

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -1,13 +1,13 @@
 <?php 
 
-//if ( session_id() == '' ){
-//        session_start(); 
-//        $_SESSION['initiated'] = true;
-//}
-//if ( !isset($_SESSION['initiated']) ){
-//        session_regenerate_id();
-//        $_SESSION['initiated'] = true;
-//}       
+if ( session_id() == '' ){
+        session_start(); 
+        $_SESSION['initiated'] = true;
+}
+if ( !isset($_SESSION['initiated']) ){
+        session_regenerate_id();
+        $_SESSION['initiated'] = true;
+}       
 
 ?>
 
