Trying to fix the IE9 madness

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -32,7 +32,8 @@ Learn more about Flex at http://flex.org
 <!--  END Browser History required section -->
 
 <title>${title}</title>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js" language="javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js" language="javascript"></script>
+<script src="script/xdr.js" language="javascript"></script>
 
 <script src="script/AC_OETags.js" language="javascript"></script>
 <script src="script/functions.js" language="javascript"></script>
